# cnpj_finder

./: README.md
CNPJ_Finder/: CMakeLists.txt  historicwindow.cpp  historicwindow.h  historicwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  ui_historicwindow.h  ui_mainwindow.h
CNPJ_Finder/.cmake/api/v1/reply/: cache-v2-e97e45c4bcf31a5dbcab.json  cmakeFiles-v1-cb3b19780dce9718a8af.json  codemodel-v2-6102e00255b7c51a5f0c.json  directory-qt3d-Release-950cd2133fda21ac44b5.json  directory-qt3d.src.animation-Release-4c073b55a865cbc418cc.json  directory-qt3d.src.core-Release-3660e2105c32b85feee3.json  directory-qt3d.src.extras-Release-ca6c454a79a5aa627133.json  directory-qt3d.src.input-Release-6d8d106671d83214a220.json  directory-qt3d.src.logic-Release-4541840ce37e4916823e.json  directory-qt3d.src.plugins.geometryloaders.default-Release-6c0bc7f019c05e862fdf.json  directory-qt3d.src.plugins.geometryloaders.gltf-Release-96297141618e5ae0d8e0.json  directory-qt3d.src.plugins.renderers.opengl-Release-ca6bfdb550791a587be2.json  directory-qt3d.src.plugins.renderers.rhi-Release-f2b0f49c1648779ec3fb.json  directory-qt3d.src.plugins.renderplugins.scene2d-Release-c9d23850dbfc974c36b8.json  directory-qt3d.src.plugins.sceneparsers.assimp-Release-53184ca0d75ccb76fe9d.json  directory-qt3d.src.plugins.sceneparsers.gltf-Release-104ae2483d7ba210607f.json  directory-qt3d.src.plugins.sceneparsers.gltfexport-Release-cfa1c44ab6c9ece90587.json  directory-qt3d.src.quick3d.imports.animation-Release-9106729c474b0e478d24.json  directory-qt3d.src.quick3d.imports.extras-Release-b90e1409e44407344738.json  directory-qt3d.src.quick3d.imports.input-Release-86128546ce1cfcca9599.json  directory-qt3d.src.quick3d.imports.logic-Release-444223eafdd3855d51ff.json  directory-qt3d.src.quick3d.imports.render-Release-c6497e00e694cf726f76.json  directory-qt3d.src.quick3d.imports.scene2d-Release-dcda8ed6a1ebc58de31d.json  directory-qt3d.src.quick3d.imports.scene3d-Release-b7028484576e525b6d19.json  directory-qt3d.src.quick3d.quick3d-Release-1b8dbbcc196824e8a2d1.json  directory-qt3d.src.quick3d.quick3danimation-Release-5a6cda8f7aaef0e4f44f.json  directory-qt3d.src.quick3d.quick3dextras-Release-7222b5d667b127a84659.json  directory-qt3d.src.quick3d.quick3dinput-Release-68fa5dffff3b1d1fd932.json  directory-qt3d.src.quick3d.quick3drender-Release-d65a545c8562c3c5720f.json  directory-qt3d.src.quick3d.quick3dscene2d-Release-021ec590a5fc4bc104a5.json  directory-qt3d.src.render-Release-d2214bf48f7d53455882.json  directory-qt5compat-Release-308d77a3b0d36c3d6883.json  directory-qt5compat.src.core5-Release-d37105aefba522e78a5d.json  directory-qt5compat.src.imports.graphicaleffects5-Release-e1b5c2b0461989251670.json  directory-qt5compat.src.imports.graphicaleffects5.private-Release-828ea1b665c98eeec925.json  directory-qtactiveqt-Release-d6fcdbbea9908e7619bf.json  directory-qtactiveqt.src.activeqt.doc-Release-803990c145ccaa13bf58.json  directory-qtbase-Release-5524c71dc8e4fa07bf7e.json  directory-qtbase.doc-Release-0a1cfcb1af4fce22c8cf.json  directory-qtbase.qmake-Release-6dac7096e35639a1a264.json  (+4910 more)
CNPJ_Finder/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
CNPJ_Formatter/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
build-CNPJ_Finder-Desktop_Qt_6_6_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  CNPJ_Finder  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-CNPJ_Finder-Desktop_Qt_6_6_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-066bf3607282d9ecd5a3.json  cmakeFiles-v1-cc2f5b78f3300f0bdb13.json  codemodel-v2-e90c4fd2bcf38e02cd49.json  directory-.-Debug-494694f85f9e205c9129.json  (+4 more)
build-CNPJ_Finder-Desktop_Qt_6_6_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-CNPJ_Finder-Desktop_Qt_6_6_2_GCC_64bit-Debug/CNPJ_Finder_autogen/: deps  mocs_compilation.cpp
build-CNPJ_Finder-Desktop_Qt_6_6_2_GCC_64bit-Debug/CNPJ_Finder_autogen/EWIEGA46WW/: moc_historicwindow.cpp  moc_historicwindow.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-CNPJ_Finder-Desktop_Qt_6_6_2_GCC_64bit-Debug/CNPJ_Finder_autogen/include/: ui_historicwindow.h  ui_mainwindow.h
build-CNPJ_Formatter-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CNPJ_Formatter  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-CNPJ_Formatter-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-CNPJ_Formatter-Desktop-Debug/CNPJ_Formatter_autogen/: deps
build-CNPJ_Formatter-Desktop-Debug/CNPJ_Formatter_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
build-CNPJ_Formatter-Desktop-Debug/CNPJ_Formatter_autogen/include/: ui_mainwindow.h
build-CNPJ_Formatter-Desktop_Qt_6_6_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CNPJ_Formatter  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-CNPJ_Formatter-Desktop_Qt_6_6_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-CNPJ_Formatter-Desktop_Qt_6_6_2_GCC_64bit-Debug/CNPJ_Formatter_autogen/: deps
build-CNPJ_Formatter-Desktop_Qt_6_6_2_GCC_64bit-Debug/CNPJ_Formatter_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
(+34 files in other folders)
